--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "apify",
-    "version": "0.21.11",
+    "version": "0.21.12",
     "description": "The scalable web crawling and scraping library for JavaScript/Node.js. Enables development of data extraction and web automation jobs (not only) with headless Chrome and Puppeteer.",
     "engines": {
         "node": "^10.17.0 || ^12.3.0"
@@ -55,7 +55,7 @@
         "@apify/ps-tree": "^1.1.3",
         "@types/cheerio": "^0.22.18",
         "@types/domhandler": "^2.4.1",
-        "@types/node": "^12",
+        "@types/node": "^14",
         "@types/puppeteer": "^3.0.0",
         "@types/socket.io": "^2.1.4",
         "@types/tough-cookie": "^4.0.0",
@@ -75,7 +75,7 @@
         "socket.io": "^2.3.0",
         "stream-json": "^1.5.0",
         "tough-cookie": "^4.0.0",
-        "underscore": "^1.10.2",
+        "underscore": "1.12.1",
         "ws": "^7.3.0"
     },
     "devDependencies": {
